# matchmaker-rs

./: Cargo.toml
examples/: game.rs  main.rs
src/: inqueue.rs  lib.rs  state.rs
tools/: client.html
