[package]
name = "yamm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Yet Another Matchaker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
