[package]
name = "yamm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Yet Another Matchaker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }

[dev-dependencies]
futures = "0.3.21"
tokio-tungstenite = "0.17.2"
env_logger = "0.8.4"
log = "0.4.0"
thiserror = "1.0.31"
